# env-agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_REORG_SUMMARY.md  EARTH_ENGINE_OPTIMIZATION.md  LICENSE  README.md  TIMEOUT_FIX.md  pyproject.toml  run_tests.py
archive/debug_materials/: debug_metadata_failure.py  debug_star_case.py  debug_surgo.py
archive/debugging_scripts/: debug_ee_query.py  debug_failing_cluster.py  test_adapter_reuse.py  test_fixed_adapter.py  test_lean_adapter.py  test_process_cluster.py  test_srtm_direct.py  test_timeout.py
archive/earth_engine_legacy/: asset_adapter.py  generic_asset_adapter.py  gold_standard_adapter.py
archive/legacy_code/: Complete_Enhanced_Services_Test.ipynb  add_harvesters.py  (+22 more)
config/: defaults.yaml  earth_engine.yaml  services.yaml
data/: operational_services_test_20250917_144928.csv
docs/: API_REFERENCE.md  CANONICAL_SERVICES.md  CREDENTIALS.md  EXTENDING_SERVICES.md  INSTALLATION.md  MODIS_LANDCOVER_INTERPRETATION.md  PANGENOME_SERVICES.md  QUICK_START.md  README.md  SERVICES.md  TEMPORAL_FALLBACK.md
env_agents/: __init__.py
examples/: README.md  quick_start.py
notebooks/: README.md  diagnose_ee_failures.py  env_agents_comprehensive_tutorial.ipynb  env_agents_core_demo.ipynb  test_landcover_bands.py  test_temporal_fallback.py
registry/: registry_harvest.json  services.json
scripts/: README.md  acquire_environmental_data.py  refresh_metadata.py  setup_credentials.py  setup_development_credentials.py
tests/: README.md  run_validation_suite.py  test_contract.py  test_phase_i_integration.py
(+233 files in other folders)
